Added basic frontend functionality for challenges.

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -5,7 +5,7 @@
 	height: 500px;
 	background-color: #757473;
 	margin: 0 auto;
-	color: black;
+	color: #417C7C;
 	width: 600px;
 	border-radius: 29px 29px 8px 8px;
 	-moz-border-radius: 29px 29px 8px 8px;
