--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -21,6 +21,7 @@
 				<a href="#profile/-13" data-ng-click="template=7"><button style="background-color:teal; color:white">Show Sample Profile</button></a>
 				<a href="#gift/0" data-ng-click="template=8"><button style="background-color:teal; color:white">Show Sample Gift</button></a>
 				<a href="#gifts-form" data-ng-click="template=9"><button style="background-color:teal; color:white">Show Gift Form</button></a>
+				<a href="#challenge/-1" data-ng-click="template=10"><button style="background-color:teal; color:white">Show Sample Challenge</button></a>
 
 				<users-tests data-ng-if="template==99"></users-tests>
 				<gifts-tests data-ng-if="template==99"></gifts-tests>
