--- a/app/assets/templates/navbar.html.erb
+++ b/app/assets/templates/navbar.html.erb
@@ -16,7 +16,7 @@
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		     	<ul class="nav navbar-nav">
 			        <li><a href="#profile/{{id}}" data-ng-click="template=1" style="color: white;">Profile</a></li>
-			        <li><a href="#challenge" data-ng-click="template=2" style="color: white;">Challenge</a></li>
+			        <li><a href="#challenge/0" data-ng-click="template=2" style="color: white;">Challenge</a></li>
 			        <li><a href="#map" data-ng-click="template=3" style="color: white;">Map</a></li>
 			        <li><a href="#shop" data-ng-click="template=4" style="color: white;">Shop</a></li>
 		      	</ul>
