Everything now uses routing instead of the template variable.

--- a/app/assets/templates/challenge.html.erb
+++ b/app/assets/templates/challenge.html.erb
@@ -20,7 +20,7 @@
 		<br>
 		<br>
 		<!-- <a href="#edit-user" data-ng-show="{{canEdit}}"><button style="background-color:teal; color:white">Edit Details</button></a> -->
-		{{message}}
+        <div class="error">{{message}}</div>
 		</div>
 		</div>
 	</div>
