--- a/app/assets/templates/navbar.html.erb
+++ b/app/assets/templates/navbar.html.erb
@@ -9,16 +9,16 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
 		      	</button>
-		      <a class="navbar-brand" href="#" data-ng-click="template=0" style="color: white;">Prank Engine</a>
+		      <a class="navbar-brand" href="#" style="color: white;">Prank Engine</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		     	<ul class="nav navbar-nav">
-			        <li><a href="#profile/{{id}}" data-ng-click="template=1" style="color: white;">Profile</a></li>
-			        <li><a href="#challenge/0" data-ng-click="template=2" style="color: white;">Challenge</a></li>
-			        <li><a href="#map" data-ng-click="template=3" style="color: white;">Map</a></li>
-			        <li><a href="#shop" data-ng-click="template=4" style="color: white;">Shop</a></li>
+			        <li><a href="#profile/{{id}}" style="color: white;">Profile</a></li>
+			        <li><a href="#challenge/0" style="color: white;">Challenge</a></li>
+			        <li><a href="#map" style="color: white;">Map</a></li>
+			        <li><a href="#shop" style="color: white;">Shop</a></li>
 		      	</ul>
 		     	<form class="navbar-form navbar-left" role="search">
 		        	<div class="form-group">
@@ -38,10 +38,10 @@
 				            <li class="divider"></li>
 				            <li><a href="#">Log out</a></li>
 			        	</ul>
-			        	<li data-ng-hide="id"><a href="#login-form" data-ng-click="template=6" style="color: white">Log in</a></li>
+			        	<li data-ng-hide="id"><a href="#login-form"style="color: white">Log in</a></li>
 			        	<li data-ng-hide="id"><a style="color: white"> | </a></li>
-			        	<li data-ng-hide="id"><a href="#users-form" data-ng-click="template=5" style="color: white">Sign up now!</a></li>
-			        	<li data-ng-show="id"><a href="#profile/{{id}}" data-ng-click="template=1" style="color: white">Welcome, {{username}}.</a></li>
+			        	<li data-ng-hide="id"><a href="#users-form"style="color: white">Sign up now!</a></li>
+			        	<li data-ng-show="id"><a href="#profile/{{id}}" style="color: white">Welcome, {{username}}.</a></li>
 			        	<li data-ng-show="id"><a style="color: white"> | </a></li>
 			        	<li data-ng-show="id"><a href="#" style="color: white" data-ng-click="user.logout()">Logout</a></li>
 			    </ul>
