--- a/app/assets/templates/profile.html.erb
+++ b/app/assets/templates/profile.html.erb
@@ -23,7 +23,7 @@
 		About me: {{profiledUser.bio}}
 		<br>
 		<br>
-		<a href="#edit-user" data-ng-show="{{canEdit}}"><button style="background-color:teal; color:white">Edit Details</button></a>
+		<a href="#edit-user" data-ng-show="{{canEdit}}"><button style="background-color:teal; color:white; margin-left: 70px;margin-bottom: 30px;">Edit Details</button></a>
 		</div>
 		</div>
 	</div>
