--- a/app/assets/templates/edit-users-form.html.erb
+++ b/app/assets/templates/edit-users-form.html.erb
@@ -54,6 +54,18 @@
         <table width="100%">
           <tr>
             <td width="200px;">
+              <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Your Bio:  </span>
+            </td>
+            <td width="200px;">
+              <input type="text" class="form-control" placeholder="I like camels." data-ng-model="editedUser.bio" style="" required>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="input-group" style="margin-bottom:1%">
+        <table width="100%">
+          <tr>
+            <td width="200px;">
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Avatar URL:  </span>
             </td>
             <td width="200px;">
