--- a/app/assets/templates/challenge.html.erb
+++ b/app/assets/templates/challenge.html.erb
@@ -20,8 +20,11 @@
 		<br>
 		<br>
 		<!-- <a href="#edit-user" data-ng-show="{{canEdit}}"><button style="background-color:teal; color:white">Edit Details</button></a> -->
+	    <a data-ng-hide="receivingUser.code == -1" href="#gifts-form"><button style="background-color:teal; color:white">Show Gift Form</button></a>
+
 		</div>
 		</div>
+
 	</div>
 
     <div class="error">{{queueMessage}}</div>
