minor styling changes for form

--- a/app/assets/templates/challenge.html.erb
+++ b/app/assets/templates/challenge.html.erb
@@ -4,8 +4,8 @@
 		<div class = "holder" style ="width: 100%; text-align: center; padding-top: 30px;">
 		<img class="circlemage" src="http://images.clipartpanda.com/question-question_mark_blue.png" >
 		<br>
-		</div>
-		<div class = "profile_info">
+		
+		<div class = "profile_info" style = "padding-bottom: 30px;">
 		<br>
 		Best timeframe: {{receivingUser.availableHours}}
 		<br> 
@@ -20,8 +20,8 @@
 		<br>
 		<br>
 		<!-- <a href="#edit-user" data-ng-show="{{canEdit}}"><button style="background-color:teal; color:white">Edit Details</button></a> -->
-	    <a data-ng-hide="receivingUser.code == -1" href="#gifts-form"><button style="background-color:teal; color:white">Show Gift Form</button></a>
-
+	    <a data-ng-hide="receivingUser.code == -1" href="#gifts-form"><button style="background-color:teal; color:white;">Show Gift Form</button></a>
+	  </div>
 		</div>
 		</div>
 
