--- a/app/assets/templates/gift-form.html.erb
+++ b/app/assets/templates/gift-form.html.erb
@@ -40,6 +40,9 @@
       <div class="input-group" style="margin-bottom:1%">
       Your gift: <img style="width:100px; height:100px;" src="{{newGift.imageUrl}}">
       <div class="error">{{message}}</div>
+     
+      </div>
+      <div class="input-group" style="margin-bottom:1%">
       <button class="btn btn-default" style="margin-top:70px;">Create Gift</button>
       </div>
 </div>
