--- a/app/assets/templates/challenge.html.erb
+++ b/app/assets/templates/challenge.html.erb
@@ -2,6 +2,10 @@
 	<div style="width: 100%">
 	<div class="usercard" data-ng-show="receivingUser.hasCurrentChallenge">
 		<div class = "holder" style ="width: 100%; text-align: center; padding-top: 30px;">
+
+		
+		<div class= "challenge_button pulse">NEW CHALLENGE</div>
+
 		<img class="circlemage" src="http://images.clipartpanda.com/question-question_mark_blue.png" >
 		<br>
 		
@@ -20,7 +24,7 @@
 		<br>
 		<br>
 		<!-- <a href="#edit-user" data-ng-show="{{canEdit}}"><button style="background-color:teal; color:white">Edit Details</button></a> -->
-	    <a data-ng-hide="receivingUser.code == -1" href="#gifts-form"><button style="background-color:teal; color:white;">Show Gift Form</button></a>
+	    <a data-ng-hide="receivingUser.code == -1" href="#gifts-form"><button style="background-color:teal; color:white;">Choose Gift!</button></a>
 	  </div>
 		</div>
 		</div>
