--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -23,7 +23,7 @@ a {
 
 body{
 	/*background:url(http://i.imgur.com/lGjlXUF.gif)no-repeat;*/
-	background:url(http://www.wallpaperhi.com/thumbnails/detail/20130202/outer%20space%20galaxies%20black%20hole%201920x1080%20wallpaper_www.wallpaperhi.com_64.jpg)no-repeat;
+	background:url(http://i.imgur.com/xOxiA6m.gif);
 	background-size: cover;
 }
 
@@ -94,14 +94,9 @@ body{
 
 
 .navbar-default {
-	opacity: .95;
 	padding-left: 30px;
 	padding-right: 30px;
-	background: -moz-linear-gradient(top, #093c5b 1%, #562601 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#093c5b), color-stop(100%,#562601)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #093c5b 1%,#562601 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #093c5b 1%,#562601 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #093c5b 1%,#562601 100%); /* IE10+ */
+	background: linear-gradient(to bottom, rgba(35, 33, 51, 1),  rgba(12, 133, 200, 0));
 	color: white;
 	z-index: 100;
 	/*position: fixed;*/
