--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -17,19 +17,14 @@
 	font-family: ‘Trebuchet MS’, Helvetica, sans-serif;
 	background-color: #757473;
 	margin: 0 auto;
-	color: #417C7C;
+	color: white;
 	width: 600px;
 	border-radius: 29px 29px 8px 8px;
 	-moz-border-radius: 29px 29px 8px 8px;
 	-webkit-border-radius: 29px 29px 8px 8px;
 	border: 3px solid #ffffff;
 	background: rgba(235,247,250,1);
-	background: -moz-linear-gradient(top, rgba(235,247,250,1) 0%, rgba(235,247,250,1) 16%, rgba(167,194,201,1) 55%, rgba(167,194,201,1) 86%, rgba(138,172,181,1) 100%);
-	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(235,247,250,1)), color-stop(16%, rgba(235,247,250,1)), color-stop(55%, rgba(167,194,201,1)), color-stop(86%, rgba(167,194,201,1)), color-stop(100%, rgba(138,172,181,1)));
-	background: -webkit-linear-gradient(top, rgba(235,247,250,1) 0%, rgba(235,247,250,1) 16%, rgba(167,194,201,1) 55%, rgba(167,194,201,1) 86%, rgba(138,172,181,1) 100%);
-	background: -o-linear-gradient(top, rgba(235,247,250,1) 0%, rgba(235,247,250,1) 16%, rgba(167,194,201,1) 55%, rgba(167,194,201,1) 86%, rgba(138,172,181,1) 100%);
-	background: -ms-linear-gradient(top, rgba(235,247,250,1) 0%, rgba(235,247,250,1) 16%, rgba(167,194,201,1) 55%, rgba(167,194,201,1) 86%, rgba(138,172,181,1) 100%);
-	background: linear-gradient(to bottom, rgba(235,247,250,1) 0%, rgba(235,247,250,1) 16%, rgba(167,194,201,1) 55%, rgba(167,194,201,1) 86%, rgba(138,172,181,1) 100%);
+	background: linear-gradient(to bottom, rgba(58,69,94,.9) 0%, rgba(44,56,82,.9) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebf7fa', endColorstr='#8aacb5', GradientType=0 );
 }
 .circlemage {
@@ -65,7 +60,7 @@
 	font-size: 30px;
 	line-height: 40px;
 	font-family: Impact, Haettenschweiler, 'Franklin Gothic Bold', Charcoal, 'Helvetica Inserat', 'Bitstream Vera Sans Bold', 'Arial Black', 'sans serif';
-	color: #417C7C ;
+	color: white;
 	padding: 30px;
 	text-align: center;
 	background-color: transparent;
