--- a/app/assets/templates/gift.html.erb
+++ b/app/assets/templates/gift.html.erb
@@ -1,13 +1,26 @@
 <div class="container-fluid" style="margin-top:-.2%" data-ng-init="profiledGift.getGiftFromUrlParams()">
-	<div class = "usercard">
+	<div class = "usercard" style="padding: 30px;">
+		<div class="input-group" style="margin-bottom:1%">
 		<img style="height:200px; width:200px" src="{{profiledGift.imageUrl}}"/>
+		</div>
+		<div class="input-group" style="margin-bottom:1%">
 			{{profiledGift.name}}
+		</div>
+		<div class="input-group" style="margin-bottom:1%">
 		Giver: {{profiledGift.giver}}
+		</div>
 		<br>
+		<div class="input-group" style="margin-bottom:1%">
 		Recipient: {{profiledGift.recipient}}
+		</div>
 		<br>
+		<div class="input-group" style="margin-bottom:1%">
 				Rating: {{profiledGift.rating}}/5
-		<br>Description: {{profiledGift.description}}
+		</div>
+		<br>
+		<div class="input-group" style="margin-bottom:1%">
+		Description: {{profiledGift.description}}
+		</div>
 		<br>
 	</div>
 </div>
