--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -23,8 +23,7 @@
 	-moz-border-radius: 29px 29px 8px 8px;
 	-webkit-border-radius: 29px 29px 8px 8px;
 	border: 3px solid #ffffff;
-	background: rgba(235,247,250,1);
-	background: linear-gradient(to bottom, rgba(58,69,94,.9) 0%, rgba(44,56,82,.9) 100%);
+	background: rgba(58,69,94,.9);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebf7fa', endColorstr='#8aacb5', GradientType=0 );
 }
 .circlemage {
