Fixed some iffy CSS on the Challenge page.

--- a/app/assets/templates/challenge.html.erb
+++ b/app/assets/templates/challenge.html.erb
@@ -4,7 +4,7 @@
 		<div class = "holder" style ="width: 100%; text-align: center; padding-top: 30px;">
 
 		
-		<div class= "challenge_button pulse">NEW CHALLENGE</div>
+		<div class= "challenge_button pulse">A Challenge Approaches!</div>
 
 		<img class="circlemage" src="http://images.clipartpanda.com/question-question_mark_blue.png" >
 		<br>
