User profile page now shows a list of given gifts.

--- a/app/assets/templates/profile.html.erb
+++ b/app/assets/templates/profile.html.erb
@@ -27,8 +27,12 @@
 		</div>
 		</div>
 	</div>
+	<br>
+	Given Gifts:
+	<br>
+	
+	<div data-ng-repeat="aGift in profiledUser.givenGifts">
+		<gift-list-element></gift-list-element>		
 
-	<div>
-		foo
 	</div>
 </div>
