Fixed CSS on some buttons on user profiles.

--- a/app/assets/templates/gift-list-element.html.erb
+++ b/app/assets/templates/gift-list-element.html.erb
@@ -21,7 +21,7 @@
 		<div class="input-group" style="margin-bottom:1%">
 			Description: {{aGift.description}}
 		</div>
-		<a href="#gift/{{aGift.id}}" data-ng-show="{{canEdit}}"><button style="background-color:teal; color:white; margin-left: 70px;margin-bottom: 30px;">Show Details</button></a>
+		<a href="#gift/{{aGift.id}}" data-ng-show="{{canEdit}}" style="margin-left: 35%"><button style="background-color:teal; color:white; margin-bottom: 30px;">Show Details</button></a>
 		<br>
 	</div>
 </div>
