Some frontend fixes

--- a/app/assets/templates/index.html.erb
+++ b/app/assets/templates/index.html.erb
@@ -1,7 +1,15 @@
 <div class="container-fluid" style="margin-top:-.2%">
-	<h1>This is our front page!</h1>
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+	<div style="margin-top: 10%; width: 100%; text-align: center;font-family: lato, sans-serif; font-weight: 200; font-size: 200px;">
+		GivR
+		<div style="padding-top: 300px;font-size: 50px;">
+		Anonymous. Beautiful. Social.
+		</div>
+	</div>
 
-	<% if Rails.env == "development" %>
+
+
+	<% if Rails.env == "production" %>
 		<h1>IMPORTANT: While messing around with the app, do look out for oddities such as...THE PAGE PERIODICALLY REFRESHING ON ITS OWN. I have been having such an issue, and I am out of ideas as to why it could be happening.</h1>
 		<br>
 		<p>The formating is at the moment tentative, but we will probably use this page to give an overview of the app, as well as post updates and in development list tasks for the current iteration.</p>
