--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -15,7 +15,7 @@
 		<navbar></navbar>
 		<div class="main-content">
 
-			<% if Rails.env == "development" %>
+			<% if Rails.env == "production" %>
 				Template: {{template}}
 			
 				<a href="#tests"><button style="background-color:teal; color:white">Run Unit Tests</button></a>
@@ -29,7 +29,7 @@
 			<div ng-view></div>
 		</div>
 
+		
 		<footbar></footbar>
-
 	</body>
 </html>
