--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -31,7 +31,7 @@ a {
 body{
 	/*background:url(http://i.imgur.com/lGjlXUF.gif)no-repeat;*/
 	background:url(http://i.imgur.com/xOxiA6m.gif);
-	background-size: cover;
+	background-size: 100% 290%;
 }
 
 .main-content {
