--- a/app/assets/templates/gift.html.erb
+++ b/app/assets/templates/gift.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid" style="margin-top:-.2%" data-ng-init="profiledGift.getGiftFromUrlParams()">
-	<div class = "usercard" style="padding: 30px;">
+	<div class = "giftcard" style="padding: 30px;">
 		<div class="input-group" style="margin-bottom:1%">
 		<img style="height:200px; width:200px" src="{{profiledGift.imageUrl}}"/>
 		</div>
