--- a/app/assets/templates/index.html.erb
+++ b/app/assets/templates/index.html.erb
@@ -2,8 +2,8 @@
 	<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<div style="margin-top: 10%; width: 100%; text-align: center;font-family: lato, sans-serif; font-weight: 200; font-size: 200px;">
 		GivR
-		<div style="padding-top: 300px;font-size: 70px;word-spacing: 10px;">
-		Social Philanthropy for the Digital Age.
+		<div style="padding-top: 300px;font-size: 70px;word-spacing: 10px;line-height: 37px;">
+		Love. Give. Thrive.
 		</div>
 	</div>
 
