--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -101,6 +101,7 @@ body{
 
 
 .navbar-default {
+	position: fixed;
 	padding-left: 30px;
 	padding-right: 30px;
 	background: linear-gradient(to bottom, rgba(35, 33, 51, 1),  rgba(12, 133, 200, 0));
