--- a/app/assets/templates/gift-list-element.html.erb
+++ b/app/assets/templates/gift-list-element.html.erb
@@ -1,27 +1,35 @@
-<div class="container-fluid" style="margin-top:-.2%">
-	<div class = "usercard" style="padding: 30px;">
-		<div class="input-group" style="margin-bottom:1%">
-		<img style="height:200px; width:200px" src="{{aGift.url}}"/>
-		</div>
-		<div class="input-group" style="margin-bottom:1%">
-			{{aGiftname}}
-		</div>
-		<div class="input-group" style="margin-bottom:1%">
-			Giver: {{aGift.giver}}
-		</div>
-		<br>
-		<div class="input-group" style="margin-bottom:1%">
-			Recipient: {{aGift.recipient}}
-		</div>
-		<br>
-		<div class="input-group" style="margin-bottom:1%">
-			Rating: {{aGift.rating}}/5
-		</div>
-		<br>
-		<div class="input-group" style="margin-bottom:1%">
-			Description: {{aGift.description}}
-		</div>
-		<a href="#gift/{{aGift.id}}" data-ng-show="{{canEdit}}" style="margin-left: 35%"><button style="background-color:teal; color:white; margin-bottom: 30px;">Show Details</button></a>
-		<br>
+
+<div class = "panel">
+	<div class="gift-front card">
+	<div class="input-group" style="margin-bottom:1%">
+	<img style="height:200px; width:200px" src="{{aGift.url}}"/>
 	</div>
+	<div class="input-group" style="margin-bottom:1%">
+		<h1>{{aGift.name}}</h1>
+	</div>
+	</div>
+	<h1>
+	<div class="gift-back card">
+	<div class="input-group" style="margin-bottom:1%">
+		Giver: {{aGift.giver}}
+	</div>
+	<br>
+	<div class="input-group" style="margin-bottom:1%">
+		Recipient: {{aGift.recipient}}
+	</div>
+	<br>
+	<div class="input-group" style="margin-bottom:1%">
+		Rating: {{aGift.rating}}/5
+	</div>
+	<br>
+	<div class="input-group" style="margin-bottom:1%">
+		Description: {{aGift.description}}
+	</div>
+	<div class="input-group" style="margin-bottom:1%">
+	<a href="#gift/{{aGift.id}}" data-ng-show="{{canEdit}}"><button style="background-color:teal; color:white; margin-bottom: 30px;">Show Details</button></a>
+	</div>
+	</div>
+
+	</div>
+	</h1>
 </div>
