--- a/app/assets/templates/profile.html.erb
+++ b/app/assets/templates/profile.html.erb
@@ -28,19 +28,20 @@
 		</div>
 	</div>
 
-	<br>
-	Given Gifts:
-	<br>
+	<div class= "giftholder">
+	<h2>Given Gifts:</h2>
+		
 	
-	<div data-ng-repeat="aGift in profiledUser.givenGifts">
+	<div data-ng-repeat="aGift in profiledUser.givenGifts" style="display: inline-block; margin: 10px;">
 		<gift-list-element></gift-list-element>		
 	</div>
+	</div>
 
-	<br>
-	Received Gifts:
-	<br>
+	<div class= "giftholder">
+	<h2>Received Gifts:</h2>
 
 	<div data-ng-repeat="aGift in profiledUser.receivedGifts">
 		<gift-list-element></gift-list-element>		
+	</div>
 	</div>
 </div>
