--- a/app/assets/templates/gift-form.html.erb
+++ b/app/assets/templates/gift-form.html.erb
@@ -20,7 +20,7 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Description:  </span>
             </td>
             <td width="200px;">
-              <input type="text" class="form-control" placeholder="Description" data-ng-model="newGift.description" style="" required>
+              <input type="text" class="form-control" placeholder="Description" data-ng-model="newGift.bio" style="" required>
             </td>
           </tr>
         </table>
