Fixed gift descriptions and removed some commented out code.

--- a/app/assets/templates/gift-list-element.html.erb
+++ b/app/assets/templates/gift-list-element.html.erb
@@ -23,7 +23,7 @@
 	</div>
 	<br>
 	<div class="input-group" style="margin-bottom:1%">
-		Description: {{aGift.bio}}
+		Description: {{aGift.description}}
 	</div>
 	<div class="input-group" style="margin-bottom:1%">
 	<a href="#gift/{{aGift.id}}" data-ng-show="{{canEdit}}"><button style="background-color:teal; color:white; margin-bottom: 30px;">Show Details</button></a>
