--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -15,7 +15,7 @@
 		<navbar></navbar>
 		<div class="main-content">
 
-			<% if Rails.env == "production" %>
+			<% if Rails.env == "development" %>
 				Template: {{template}}
 			
 				<a href="#tests"><button style="background-color:teal; color:white">Run Unit Tests</button></a>
