--- a/app/assets/templates/index.html.erb
+++ b/app/assets/templates/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid" style="margin-top:-.2%">
 	<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-	<div style="margin-top: 10%; width: 100%; text-align: center;font-family: lato, sans-serif; font-weight: 200; font-size: 200px;">
+	<div class= "title">
 		GivR
 		<div style="padding-top: 300px;font-size: 70px;word-spacing: 10px;line-height: 37px;">
 		Love. Give. Thrive.
