--- a/app/assets/templates/profile.html.erb
+++ b/app/assets/templates/profile.html.erb
@@ -28,7 +28,7 @@
 		</div>
 	</div>
 
-	<div class= "giftholder">
+	<div class= "giftholder" style="float: right;">
 	<h2>Given Gifts:</h2>
 		
 	
@@ -37,7 +37,7 @@
 	</div>
 	</div>
 
-	<div class= "giftholder">
+	<div class= "giftholder" style="float: left;">
 	<h2>Received Gifts:</h2>
 
 	<div data-ng-repeat="aGift in profiledUser.receivedGifts">
