--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -45,7 +45,7 @@ h2{
 	-moz-box-shadow:    0px 2px 11px 0px rgba(39, 50, 50, 1);
 	box-shadow:         0px 2px 11px 0px rgba(39, 50, 50, 1);
 	font-family: raleway, sans-serif;
-	background-color: rgba(240, 248, 255, .97);
+	background-color: rgba(240, 248, 255, .9);
 	margin: 0 auto;
 	color: black !important;
 	width: 600px;
@@ -59,10 +59,10 @@ h2{
     height: 500px;
     margin: auto;
     position: relative;
-    background-color: rgba(240, 248, 255, .97);
+    background-color: rgba(240, 248, 255, .1);
 }
 .card {
-		background-color: rgba(240, 248, 255, .97);
+		background-color: rgba(240, 248, 255, .1);
     width: 100%;
     height: 100%;
     -o-transition: all .5s;
@@ -183,9 +183,10 @@ h2{
 }
 
 .challenge_button{
+	color: black !important;
 	font-size: 30px;
 	line-height: 40px;
-	font-family: Impact, Haettenschweiler, 'Franklin Gothic Bold', Charcoal, 'Helvetica Inserat', 'Bitstream Vera Sans Bold', 'Arial Black', 'sans serif';
+	font-family: raleway, 'Helvetica Inserat', 'Bitstream Vera Sans Bold', 'Arial Black', 'sans serif';
 	color: white;
 	padding: 30px;
 	text-align: center;
