--- a/app/assets/templates/footbar.html.erb
+++ b/app/assets/templates/footbar.html.erb
@@ -1,4 +1,4 @@
-<div class="footbar" style="font-size:13px">
+<div class="footbar" style="width: 100%; font-size:13px">
 	Current version: 0.2.1 |
 	<a href="#about">About Us</a>
 	|
